# NativeBuildDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativebuilddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  hello.cpp  test.h
app/src/main/java/com/example/nativebuilddemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/nativebuilddemo/: ExampleUnitTest.java
cmakedemo/: CMakeLists.txt  build.gradle
cmakedemo/src/main/cpp/: hello.cpp
cmakedemo/src/main/java/com/example/cmakedemo/: MainActivity.java
cmakedemo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lamedemo/: CMakeLists.txt  build.gradle
lamedemo/src/main/cpp/: audioEncoder.cpp
lamedemo/src/main/cpp/include/: lame.h
lamedemo/src/main/java/com/example/lamedemo/: MainActivity.java
player/: CMakeLists.txt  build.gradle
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  MyFFmpeg.cpp  MyFFmpeg.h  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp
player/src/main/java/com/example/player/: MainActivity.java  MyPlayer.java
player/src/main/res/layout/: activity_main.xml
